# QT-Projects

./: .gitignore  README.md
Calculator/: CMakeLists.txt  calculator.h
Detect-User-Inactivity/: Detect-User-Inactivity.pro  greywindow.cpp  led.cpp  led.h  main.cpp  maindialog.cpp  maindialog.ui
ListModel/: ListModel.pro  model.h
MultiThreading/: CMakeLists.txt  worker.cpp
Promoting-AnalogClock/: Promoting-AnalogClock.pro  analogclock.h  maindialog.cpp  maindialog.ui
Qml-Gadgets/: main.cpp  main.qml  person.h
Qt Quick/Canvas/: README.md
Qt Quick/Canvas/qml/: CircularProgressBar.qml  CustomSlider.qml
Qt Quick/Flickable/: README.md
Qt Quick/ListModel/: main.cpp  main.qml  model.cpp
Qt Quick/Object-Ownership/: Object-Ownership.pro  main.qml  student.cpp  student.h  studentlist.h
Qt Quick/Project-CarInfotainment/: main.qml  qml.qrc
Qt Quick/Project-CarInfotainment/Controllers/: achandler.h  system.cpp  system.h
Qt Quick/Project-DynamicNumberPad/: qml.qrc
Qt Quick/Project-ImageViewer/: README.md  qml.qrc
Qt Quick/Project-ToDoList/: qml.qrc
Qt Quick/Qml-Gadgets/: person.cpp
Qt Quick/Qt Bridge for Figma/: README.md
Qt Quick/Shopping-App/: CMakeLists.txt  README.md  main.cpp
Qt Quick/Shopping-App/qml/Components/: IconButton.qml
Qt Quick/Shopping-App/qml/delegates/: ProductDelegate.qml
Qt Quick/Shopping-App/qml/theme/: AppTheme.qml
Qt Quick/Shopping-App/qml/views/: Dashboard.qml  ProductsView.qml
Qt Quick/StackView/: main.cpp  qml.qrc
Qt Quick/States-Transitions/: README.md  main.cpp
Qt Quick/qml-training/Canvas/: CMakeLists.txt  main.cpp
Qt Quick/qml-training/Canvas/qml/: CircularProgressBar.qml  main.qml
Qt Widget/Calculator/: calculator.cpp
Qt Widget/Detect-User-Inactivity/: README.md  greywindow.h  led.cpp  led.h  maindialog.cpp  maindialog.h
Qt Widget/MultiThreading/: widget.cpp  widget.h  worker.h
Qt Widget/Promoting-AnalogClock/: Promoting-AnalogClock.pro  analogclock.cpp  maindialog.cpp
Qt Widget/Styling-Widgets/: README.md  Resources.qrc  Styling-Widgets.pro  maindialog.h
Qt Widget/TableView/: README.md  TableView.pro
Qt Widget/UnitTests/: README.md
Styling-Widgets/: main.cpp  maindialog.cpp
Styling-Widgets/CustomWidgets/: clickableimage.h  customlineedit.cpp  customspinbpx.h
Styling-Widgets/SplitterWidgets/: leftsidewidget.cpp  rightsidewidget.cpp
TableView/Application/: application.cpp  application.h
TableView/TableModel/: TableModel.pro  tablemodel.cpp
TableView/UserInterface/: UserInterface.pro
UnitTests/: UnitTests.pro
UnitTests/Application/: main.cpp
UnitTests/ApplicationLib/: ApplicationLib.pro  ApplicationLib_global.h  applicationlib.h  divideexample.cpp
(+96 files in other folders)
